bindings/rust/target/debug/build/skip-rs-64f4ed8740b0587e/out/bindings.rs

/* automatically generated by rust-bindgen 0.69.5 */

pub const _STDINT_H: u32 = 1;
pub const _FEATURES_H: u32 = 1;
pub const _DEFAULT_SOURCE: u32 = 1;
pub const __GLIBC_USE_ISOC2X: u32 = 0;
pub const __USE_ISOC11: u32 = 1;
pub const __USE_ISOC99: u32 = 1;
pub const __USE_ISOC95: u32 = 1;
pub const __USE_POSIX_IMPLICITLY: u32 = 1;
pub const _POSIX_SOURCE: u32 = 1;
pub const _POSIX_C_SOURCE: u32 = 200809;
pub const __USE_POSIX: u32 = 1;
pub const __USE_POSIX2: u32 = 1;
pub const __USE_POSIX199309: u32 = 1;
pub const __USE_POSIX199506: u32 = 1;
pub const __USE_XOPEN2K: u32 = 1;
pub const __USE_XOPEN2K8: u32 = 1;
pub const _ATFILE_SOURCE: u32 = 1;
pub const __WORDSIZE: u32 = 64;
pub const __WORDSIZE_TIME64_COMPAT32: u32 = 1;
pub const __SYSCALL_WORDSIZE: u32 = 64;
pub const __TIMESIZE: u32 = 64;
pub const __USE_MISC: u32 = 1;
pub const __USE_ATFILE: u32 = 1;
pub const __USE_FORTIFY_LEVEL: u32 = 0;
pub const __GLIBC_USE_DEPRECATED_GETS: u32 = 0;
pub const __GLIBC_USE_DEPRECATED_SCANF: u32 = 0;
pub const __GLIBC_USE_C2X_STRTOL: u32 = 0;
pub const _STDC_PREDEF_H: u32 = 1;
pub const __STDC_IEC_559__: u32 = 1;
pub const __STDC_IEC_60559_BFP__: u32 = 201404;
pub const __STDC_IEC_559_COMPLEX__: u32 = 1;
pub const __STDC_IEC_60559_COMPLEX__: u32 = 201404;
pub const __STDC_ISO_10646__: u32 = 201706;
pub const __GNU_LIBRARY__: u32 = 6;
pub const __GLIBC__: u32 = 2;
pub const __GLIBC_MINOR__: u32 = 39;
pub const _SYS_CDEFS_H: u32 = 1;
pub const __glibc_c99_flexarr_available: u32 = 1;
pub const __LDOUBLE_REDIRECTS_TO_FLOAT128_ABI: u32 = 0;
pub const __HAVE_GENERIC_SELECTION: u32 = 1;
pub const __GLIBC_USE_LIB_EXT2: u32 = 0;
pub const __GLIBC_USE_IEC_60559_BFP_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_BFP_EXT_C2X: u32 = 0;
pub const __GLIBC_USE_IEC_60559_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_FUNCS_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_FUNCS_EXT_C2X: u32 = 0;
pub const __GLIBC_USE_IEC_60559_TYPES_EXT: u32 = 0;
pub const _BITS_TYPES_H: u32 = 1;
pub const _BITS_TYPESIZES_H: u32 = 1;
pub const __OFF_T_MATCHES_OFF64_T: u32 = 1;
pub const __INO_T_MATCHES_INO64_T: u32 = 1;
pub const __RLIM_T_MATCHES_RLIM64_T: u32 = 1;
pub const __STATFS_MATCHES_STATFS64: u32 = 1;
pub const __KERNEL_OLD_TIMEVAL_MATCHES_TIMEVAL64: u32 = 1;
pub const __FD_SETSIZE: u32 = 1024;
pub const _BITS_TIME64_H: u32 = 1;
pub const _BITS_WCHAR_H: u32 = 1;
pub const _BITS_STDINT_INTN_H: u32 = 1;
pub const _BITS_STDINT_UINTN_H: u32 = 1;
pub const _BITS_STDINT_LEAST_H: u32 = 1;
pub const INT8_MIN: i32 = -128;
pub const INT16_MIN: i32 = -32768;
pub const INT32_MIN: i32 = -2147483648;
pub const INT8_MAX: u32 = 127;
pub const INT16_MAX: u32 = 32767;
pub const INT32_MAX: u32 = 2147483647;
pub const UINT8_MAX: u32 = 255;
pub const UINT16_MAX: u32 = 65535;
pub const UINT32_MAX: u32 = 4294967295;
pub const INT_LEAST8_MIN: i32 = -128;
pub const INT_LEAST16_MIN: i32 = -32768;
pub const INT_LEAST32_MIN: i32 = -2147483648;
pub const INT_LEAST8_MAX: u32 = 127;
pub const INT_LEAST16_MAX: u32 = 32767;
pub const INT_LEAST32_MAX: u32 = 2147483647;
pub const UINT_LEAST8_MAX: u32 = 255;
pub const UINT_LEAST16_MAX: u32 = 65535;
pub const UINT_LEAST32_MAX: u32 = 4294967295;
pub const INT_FAST8_MIN: i32 = -128;
pub const INT_FAST16_MIN: i64 = -9223372036854775808;
pub const INT_FAST32_MIN: i64 = -9223372036854775808;
pub const INT_FAST8_MAX: u32 = 127;
pub const INT_FAST16_MAX: u64 = 9223372036854775807;
pub const INT_FAST32_MAX: u64 = 9223372036854775807;
pub const UINT_FAST8_MAX: u32 = 255;
pub const UINT_FAST16_MAX: i32 = -1;
pub const UINT_FAST32_MAX: i32 = -1;
pub const INTPTR_MIN: i64 = -9223372036854775808;
pub const INTPTR_MAX: u64 = 9223372036854775807;
pub const UINTPTR_MAX: i32 = -1;
pub const PTRDIFF_MIN: i64 = -9223372036854775808;
pub const PTRDIFF_MAX: u64 = 9223372036854775807;
pub const SIG_ATOMIC_MIN: i32 = -2147483648;
pub const SIG_ATOMIC_MAX: u32 = 2147483647;
pub const SIZE_MAX: i32 = -1;
pub const WINT_MIN: u32 = 0;
pub const WINT_MAX: u32 = 4294967295;
pub type wchar_t = ::std::os::raw::c_int;
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: ::std::os::raw::c_longlong,
    pub __bindgen_padding_0: u64,
    pub __clang_max_align_nonce2: u128,
}
#[test]
fn bindgen_test_layout_max_align_t() {
    const UNINIT: ::std::mem::MaybeUninit<max_align_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<max_align_t>(),
        32usize,
        concat!("Size of: ", stringify!(max_align_t))
    );
    assert_eq!(
        ::std::mem::align_of::<max_align_t>(),
        16usize,
        concat!("Alignment of ", stringify!(max_align_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).__clang_max_align_nonce1) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(max_align_t),
            "::",
            stringify!(__clang_max_align_nonce1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).__clang_max_align_nonce2) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(max_align_t),
            "::",
            stringify!(__clang_max_align_nonce2)
        )
    );
}
pub type __u_char = ::std::os::raw::c_uchar;
pub type __u_short = ::std::os::raw::c_ushort;
pub type __u_int = ::std::os::raw::c_uint;
pub type __u_long = ::std::os::raw::c_ulong;
pub type __int8_t = ::std::os::raw::c_schar;
pub type __uint8_t = ::std::os::raw::c_uchar;
pub type __int16_t = ::std::os::raw::c_short;
pub type __uint16_t = ::std::os::raw::c_ushort;
pub type __int32_t = ::std::os::raw::c_int;
pub type __uint32_t = ::std::os::raw::c_uint;
pub type __int64_t = ::std::os::raw::c_long;
pub type __uint64_t = ::std::os::raw::c_ulong;
pub type __int_least8_t = __int8_t;
pub type __uint_least8_t = __uint8_t;
pub type __int_least16_t = __int16_t;
pub type __uint_least16_t = __uint16_t;
pub type __int_least32_t = __int32_t;
pub type __uint_least32_t = __uint32_t;
pub type __int_least64_t = __int64_t;
pub type __uint_least64_t = __uint64_t;
pub type __quad_t = ::std::os::raw::c_long;
pub type __u_quad_t = ::std::os::raw::c_ulong;
pub type __intmax_t = ::std::os::raw::c_long;
pub type __uintmax_t = ::std::os::raw::c_ulong;
pub type __dev_t = ::std::os::raw::c_ulong;
pub type __uid_t = ::std::os::raw::c_uint;
pub type __gid_t = ::std::os::raw::c_uint;
pub type __ino_t = ::std::os::raw::c_ulong;
pub type __ino64_t = ::std::os::raw::c_ulong;
pub type __mode_t = ::std::os::raw::c_uint;
pub type __nlink_t = ::std::os::raw::c_ulong;
pub type __off_t = ::std::os::raw::c_long;
pub type __off64_t = ::std::os::raw::c_long;
pub type __pid_t = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __fsid_t {
    pub __val: [::std::os::raw::c_int; 2usize],
}
#[test]
fn bindgen_test_layout___fsid_t() {
    const UNINIT: ::std::mem::MaybeUninit<__fsid_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<__fsid_t>(),
        8usize,
        concat!("Size of: ", stringify!(__fsid_t))
    );
    assert_eq!(
        ::std::mem::align_of::<__fsid_t>(),
        4usize,
        concat!("Alignment of ", stringify!(__fsid_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).__val) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__fsid_t),
            "::",
            stringify!(__val)
        )
    );
}
pub type __clock_t = ::std::os::raw::c_long;
pub type __rlim_t = ::std::os::raw::c_ulong;
pub type __rlim64_t = ::std::os::raw::c_ulong;
pub type __id_t = ::std::os::raw::c_uint;
pub type __time_t = ::std::os::raw::c_long;
pub type __useconds_t = ::std::os::raw::c_uint;
pub type __suseconds_t = ::std::os::raw::c_long;
pub type __suseconds64_t = ::std::os::raw::c_long;
pub type __daddr_t = ::std::os::raw::c_int;
pub type __key_t = ::std::os::raw::c_int;
pub type __clockid_t = ::std::os::raw::c_int;
pub type __timer_t = *mut ::std::os::raw::c_void;
pub type __blksize_t = ::std::os::raw::c_long;
pub type __blkcnt_t = ::std::os::raw::c_long;
pub type __blkcnt64_t = ::std::os::raw::c_long;
pub type __fsblkcnt_t = ::std::os::raw::c_ulong;
pub type __fsblkcnt64_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt64_t = ::std::os::raw::c_ulong;
pub type __fsword_t = ::std::os::raw::c_long;
pub type __ssize_t = ::std::os::raw::c_long;
pub type __syscall_slong_t = ::std::os::raw::c_long;
pub type __syscall_ulong_t = ::std::os::raw::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut ::std::os::raw::c_char;
pub type __intptr_t = ::std::os::raw::c_long;
pub type __socklen_t = ::std::os::raw::c_uint;
pub type __sig_atomic_t = ::std::os::raw::c_int;
pub type int_least8_t = __int_least8_t;
pub type int_least16_t = __int_least16_t;
pub type int_least32_t = __int_least32_t;
pub type int_least64_t = __int_least64_t;
pub type uint_least8_t = __uint_least8_t;
pub type uint_least16_t = __uint_least16_t;
pub type uint_least32_t = __uint_least32_t;
pub type uint_least64_t = __uint_least64_t;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_long;
pub type int_fast32_t = ::std::os::raw::c_long;
pub type int_fast64_t = ::std::os::raw::c_long;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_ulong;
pub type uint_fast32_t = ::std::os::raw::c_ulong;
pub type uint_fast64_t = ::std::os::raw::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub const SkipEndian_SKIP_BIG_ENDIAN: SkipEndian = 0;
pub const SkipEndian_SKIP_LITTLE_ENDIAN: SkipEndian = 1;
pub type SkipEndian = ::std::os::raw::c_uint;
pub const SkipError_SKIP_SUCCESS: SkipError = 0;
pub const SkipError_SKIP_ERROR_INVALID_ARGUMENT: SkipError = -1;
pub const SkipError_SKIP_ERROR_OUT_OF_BOUNDS: SkipError = -2;
pub const SkipError_SKIP_ERROR_ALLOCATION_FAILED: SkipError = -3;
pub const SkipError_SKIP_ERROR_BUFFER_TOO_SMALL: SkipError = -4;
pub const SkipError_SKIP_ERROR_INVALID_CONFIG: SkipError = -5;
pub type SkipError = ::std::os::raw::c_int;
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum SkipDataTypeCode {
    skip_int8 = 0,
    skip_uint8 = 1,
    skip_int16 = 2,
    skip_uint16 = 3,
    skip_int32 = 4,
    skip_uint32 = 5,
    skip_int64 = 6,
    skip_uint64 = 7,
    skip_float32 = 8,
    skip_float64 = 9,
    skip_char = 10,
    skip_nest = 11,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SkipInternalType {
    pub type_code: i32,
    pub count: u64,
}
#[test]
fn bindgen_test_layout_SkipInternalType() {
    const UNINIT: ::std::mem::MaybeUninit<SkipInternalType> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<SkipInternalType>(),
        16usize,
        concat!("Size of: ", stringify!(SkipInternalType))
    );
    assert_eq!(
        ::std::mem::align_of::<SkipInternalType>(),
        8usize,
        concat!("Alignment of ", stringify!(SkipInternalType))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_code) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(SkipInternalType),
            "::",
            stringify!(type_code)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).count) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(SkipInternalType),
            "::",
            stringify!(count)
        )
    );
}
extern "C" {
    pub fn skip_create_base_config() -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn skip_push_type_to_config(
        cfg: *mut ::std::os::raw::c_void,
        type_code: i32,
        len: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_pop_type_from_config(cfg: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_get_type_at_index(
        cfg: *mut ::std::os::raw::c_void,
        index: u64,
    ) -> *mut SkipInternalType;
}
extern "C" {
    pub fn skip_free_cfg(cfg: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_get_data_size(cfg: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn skip_get_datatype_size(type_code: i32) -> u64;
}
extern "C" {
    pub fn skip_write_index_to_buffer(
        cfg: *mut ::std::os::raw::c_void,
        buffer: *mut ::std::os::raw::c_void,
        buffer_size: u64,
        value: *mut ::std::os::raw::c_void,
        index: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_read_index_from_buffer(
        cfg: *mut ::std::os::raw::c_void,
        buffer: *mut ::std::os::raw::c_void,
        buffer_size: u64,
        value: *mut ::std::os::raw::c_void,
        index: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Retrieves a direct pointer to the start of the data for a given index within the buffer.\n\n @warning On architectures with strict memory alignment requirements, dereferencing the returned pointer\n for multi-byte types may cause performance issues or crashes. For portable and safe access,\n prefer using skip_read_index_from_buffer, which handles alignment and endianness correctly.\n This function is primarily for use cases where in-place, read-only access to byte arrays\n (e.g., strings) is needed and performance is critical.\n\n @param cfg A pointer to the SKIP config.\n @param buffer A pointer to the source buffer.\n @param index The index in the config that specifies which data segment to point to.\n @return A void* pointer to the data segment, or `nullptr` if the index is out of bounds."]
    pub fn skip_get_index_ptr(
        cfg: *mut ::std::os::raw::c_void,
        buffer: *mut ::std::os::raw::c_void,
        index: u64,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " @brief Imports a configuration body into a pre-existing config object.\n\n This function reads the body of a a configuration from the given buffer and populates the\n provided config object. This should be called after skip_import_header.\n\n @param cfg A pointer to the config object created by skip_import_header.\n @param buffer A pointer to the buffer containing the configuration body.\n @param buffer_size The size of the buffer.\n @return SKIP_SUCCESS on success, or an error code on failure."]
    pub fn skip_import_header_body(
        cfg: *mut ::std::os::raw::c_void,
        buffer: *const ::std::os::raw::c_char,
        buffer_size: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Gets the required buffer size for the configuration body.\n\n @param cfg A pointer to the SKIP config.\n @return The size in bytes required for the configuration body."]
    pub fn skip_get_export_body_size(cfg: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    #[doc = " @brief Exports the configuration body to a buffer.\n\n This function serializes the main body of the configuration, excluding the header.\n\n @param cfg A pointer to the SKIP config.\n @param buffer A pointer to the destination buffer.\n @param buffer_size The size of the destination buffer.\n @return SKIP_SUCCESS on success, or an error code on failure."]
    pub fn skip_export_header_body(
        cfg: *mut ::std::os::raw::c_void,
        buffer: *mut ::std::os::raw::c_char,
        buffer_size: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Gets the fixed size of the configuration header.\n\n @return The size of the header in bytes."]
    pub fn skip_get_header_export_size() -> u64;
}
extern "C" {
    #[doc = " @brief Exports the configuration header to a buffer.\n\n @param cfg A pointer to the SKIP config.\n @param buffer A pointer to the destination buffer.\n @param buffer_size The size of the destination buffer.\n @param out_body_size A pointer to a uint64_t to store the size of the configuration body.\n @return SKIP_SUCCESS on success, or an error code on failure."]
    pub fn skip_export_header(
        cfg: *mut ::std::os::raw::c_void,
        buffer: *mut ::std::os::raw::c_char,
        buffer_size: u64,
        out_body_size: *mut u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Imports a configuration header and creates a new config object.\n\n @param buffer A pointer to the buffer containing the header.\n @param buffer_size The size of the buffer.\n @param out_body_size A pointer to a uint64_t to store the expected size of the configuration body.\n @return A pointer to the newly created config object, or NULL on failure."]
    pub fn skip_import_header(
        buffer: *const ::std::os::raw::c_char,
        buffer_size: u64,
        out_body_size: *mut u64,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn skip_get_system_endian() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_set_endian_value_cfg(
        cfg: *mut ::std::os::raw::c_void,
        endian: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_get_cfg_endian(cfg: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_create_nest_buffer(
        final_res: *mut ::std::os::raw::c_void,
        final_res_size: u64,
        meta_buffer: *mut ::std::os::raw::c_void,
        meta_size: u64,
        data_buffer: *mut ::std::os::raw::c_void,
        data_size: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_get_nest_cfg(
        cfg: *mut ::std::os::raw::c_void,
        nest_base_cfg: *mut ::std::os::raw::c_void,
        nest_buffer: *mut ::std::os::raw::c_void,
        nest_size: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_get_nested_data_buffer(
        nested_cfg_buffer: *mut ::std::os::raw::c_void,
        nest_buffer: *mut ::std::os::raw::c_void,
        nest_size: u64,
        data_buffer: *mut ::std::os::raw::c_void,
        data_size: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_export_standalone_size(cfg: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn skip_export_standalone(
        cfg: *mut ::std::os::raw::c_void,
        data_buffer: *mut ::std::os::raw::c_void,
        data_size: u64,
        standalone_buffer: *mut ::std::os::raw::c_void,
        standalone_size: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_fill_import_standalone_cfg(
        void_null_ptr: *mut ::std::os::raw::c_void,
        buffer: *mut ::std::os::raw::c_void,
        buffer_size: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skip_fill_data_buffer_import_standalone(
        cfg: *mut ::std::os::raw::c_void,
        buffer: *mut ::std::os::raw::c_void,
        buffer_size: u64,
        data_buffer: *mut ::std::os::raw::c_void,
        data_buffer_size: u64,
    ) -> ::std::os::raw::c_int;
}
